--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    <table align="center" border="1" width="300" height="100">
-        <tr>
-            <td colspan="3" align="center">作業:HTML表格</td>
-        </tr>
-        <tr>
-            <td rowspan="3" align="center" width="100" height="100" color=>100&times;100</td>
-            <td>班級</td>
-            <td>休閒一A</td>
-        </tr>
-        <tr>
-            <td>姓名</td>
-            <td>沈郁璇</td>
-        </tr>
-        <tr>
-            <td>姓名</td>
-            <td>沈郁璇</td>
-        </tr>
-           
-    </table>
+    <table align="canter" border="1" widch="300" height="100">
+<tr>
+    <td colspan="3" align="center">作業:HTML表格</td>
+</tr>
+    <tr>
+        <td rowspan="3">100*100</td>
+        <td>班級</td>
+        <td>休閒一A</td>
+    </tr>
+    <tr>
+        <td>姓名</td>
+        <td>沈郁璇</td>
+    </tr>
+    <tr>
+        <td>學號</td>
+        <td>3411007040</td>
+    </tr>
+</table>
+<br>
+<br>
+</tr>
+</table>
 </body>
 </html>
