--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <td colspan="3" align="center">作業:HTML表格</td>
 </tr>
     <tr>
-        <td rowspan="3">100*100</td>
+        <td rowspan="3" width="100"><img src="https://fakeimg.pl/100x100/001122"></td>
         <td>班級</td>
         <td>休閒一A</td>
     </tr>
