--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </tr>
 <tr>
     <td align="center">姓名</td>                                                                                                                 
-    <td>林子芸</td>
+    <td>沈郁璇</td>
 </tr>
 <tr>
     <td align="center">學號</td>
-    <td>3411007037</td>
+    <td>3411007040</td>
 </tr>
 <tr>
      <td rowspan="3" align="center">專長</td>
